--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
         "en": "Duniter client to manage wallets, certifications in a libre money.",
         "fr": "Client Duniter pour gérer ses portes-monnaie, les certifications au sein d’une monnaie libre."
     },
+    "version": "1.3.11~ynh1",
     "url": "https://github.com/duniter/cesium",
     "license": "free",
     "maintainer": {
