--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,7 @@
                     "en": "Is it a public application?",
                     "fr": "Est-ce une application publique ?"
                 },
-                "default": true
+                "default": false
             }
         ]
     }
