--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,8 @@
-location YNH_WWW_PATH {
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+location __PATH__/ {
 
   # Path to source
-  alias YNH_WWW_ALIAS ;
+  alias __FINALPATH__/ ;
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
