add an 'help' key for argument 'is_public'

--- a/manifest.json
+++ b/manifest.json
@@ -49,6 +49,10 @@
                     "en": "Is it a public application?",
                     "fr": "Est-ce une application publique ?"
                 },
+                "help": {
+                    "en": "If it is a public application, there will not have authentification"
+                    "fr": "Si l'application est publique, il n'y aura pas d'authentification"
+                },
                 "default": false
             }
         ]
