--- a/manifest.json
+++ b/manifest.json
@@ -6,14 +6,11 @@
         "en": "Duniter client to manage wallets, certifications in a libre money",
         "fr": "Client Duniter pour gérer ses portes-monnaie, les certifications au sein d’une monnaie libre"
     },
-    "version": "1.6.12~ynh1",
+    "version": "1.6.12~ynh2",
     "url": "https://github.com/duniter/cesium",
     "upstream": {
         "license": "AGPL-3.0-or-later",
         "website": "https://cesium.app",
-        "demo": "https://demo.example.com",
-        "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
         "code": "https://github.com/duniter/cesium"
     },
     "license": "AGPL-3.0-or-later",
@@ -23,21 +20,21 @@
         "url": "https://moul.re"
     },
     "requirements": {
-        "yunohost": ">> 4.2.3"
+        "yunohost": ">= 4.3.0"
     },
     "multi_instance": false,
     "services": [
         "nginx"
     ],
     "arguments": {
-        "install" : [
+        "install": [
             {
                 "name": "domain",
                 "type": "domain"
             },
             {
                 "name": "path",
-		        "type": "path",
+                "type": "path",
                 "example": "/cesium",
                 "default": "/cesium"
             },
