--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,9 +1,8 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
+    # Path to source
+    alias __INSTALL_DIR__/;
 
-  # Path to source
-  alias __FINALPATH__/;
-
-  # Include SSOWAT user panel.
-  include conf.d/yunohost_panel.conf.inc;
+    # Include SSOWAT user panel.
+    include conf.d/yunohost_panel.conf.inc;
 }
